[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Testing/map.gd" type="Script" id=1]
[ext_resource path="res://prefabs/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Testing/NetworkSetup.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.886275, 0.160784, 0.160784, 1 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[node name="Map" type="Spatial"]
script = ExtResource( 1 )

[node name="NetworkSetup" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -514.0
margin_top = -245.0
margin_right = 514.0
margin_bottom = 245.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSetup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -76.0
margin_right = 180.0
margin_bottom = 76.0

[node name="IpAdress" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_right = 360.0
margin_bottom = 24.0
align = 1
placeholder_text = "IP Adress"

[node name="Host" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 28.0
margin_right = 360.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 60 )
text = "Host"

[node name="Join" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 92.0
margin_right = 360.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 60 )
text = "Join"

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.505278, 0.811459, -0.293648, 0.0566778, 0.370752, 0.927001, 0.861094, 0.45175, -0.233325, -6.01714, 5.38947, 6.84945 )
shadow_enabled = true

[node name="world" type="MeshInstance" parent="."]
transform = Transform( -20, 0, 0, 0, -0.565, 0, 0, 0, -21.302, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="world"]

[node name="CollisionShape" type="CollisionShape" parent="world/StaticBody"]
shape = SubResource( 3 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.77322, 3.81074, -9.63128 )

[node name="Enemy2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.77322, 3.81074, -13.4721 )

[connection signal="text_changed" from="NetworkSetup/VBoxContainer/IpAdress" to="NetworkSetup" method="_on_IpAdress_text_changed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Host" to="NetworkSetup" method="_on_Host_pressed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Join" to="NetworkSetup" method="_on_Join_pressed"]
